--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Health check monitoring system backend",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.7.8",
